--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,9 @@ name = "AVSfldIO"
 uuid = "b6189060-daf9-4c28-845a-cc0984b81781"
 authors = ["Jeff Fessler <fessler@umich.edu>"]
 version = "0.1.0"
+
+[deps]
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+
+[compat]
+FileIO = "1.8"
