--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -41,5 +41,5 @@ jobs:
       - name: BuildAndDeploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
+          # DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
         run: julia --project=docs/ docs/make.jl
