--- a/.github/workflows/UnitTest.yml
+++ b/.github/workflows/UnitTest.yml
@@ -20,8 +20,7 @@ jobs:
     strategy:
       matrix:
         julia-version: ['1.6', 'nightly']
-      # os: [ubuntu-latest, windows-latest, macOS-latest]
-        os: [ubuntu-latest, macOS-latest]
+        os: [ubuntu-latest, windows-latest, macOS-latest]
       # fail-fast: true
 
     steps:
