--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -5,7 +5,6 @@ on:
   push:
     branches:
       - 'main'
-      - 'release-'
     tags: '*'
 
 jobs:
@@ -41,4 +40,5 @@ jobs:
       - name: BuildAndDeploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
         run: julia --project=docs/ docs/make.jl
