--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "AVSfldIO"
 uuid = "b6189060-daf9-4c28-845a-cc0984b81781"
-authors = ["Jeff Fessler <fessler@umich.edu>"]
+authors = ["Jeff Fessler <fessler@umich.edu> and contributors"]
 version = "0.2.1"
 
 [deps]
