--- a/.github/workflows/UnitTest.yml
+++ b/.github/workflows/UnitTest.yml
@@ -32,16 +32,16 @@ jobs:
         with:
           version: ${{ matrix.version }}
 #     - name: Cache artifacts
-#       uses: actions/cache@v3
-#       env:
-#         cache-name: cache-artifacts
-#       with:
-#         path: ~/.julia/artifacts
-#         key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
-#         restore-keys: |
-#           ${{ runner.os }}-test-${{ env.cache-name }}-
-#           ${{ runner.os }}-test-
-#           ${{ runner.os }}-
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-artifacts
+        with:
+          path: ~/.julia/artifacts
+          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-test-${{ env.cache-name }}-
+            ${{ runner.os }}-test-
+            ${{ runner.os }}-
 #     - name: "Unit Test"
       - uses: julia-actions/julia-buildpkg@latest
       - uses: julia-actions/julia-runtest@latest
