--- a/.github/workflows/UnitTest.yml
+++ b/.github/workflows/UnitTest.yml
@@ -1,4 +1,4 @@
-name: Unit test
+name: CI
 
 on:
   create:
@@ -7,45 +7,39 @@ on:
     branches:
       - main
     paths-ignore:
+      - '**.md'
       - 'docs/**'
   pull_request:
     paths-ignore:
+      - '**.md'
       - 'docs/**'
-  schedule:
-    - cron: '20 00 1 * *'
+  workflow_dispatch:
 
 jobs:
   test:
+    name: Julia ${{ matrix.version }} - ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
+    continue-on-error: ${{ matrix.version == 'nightly' }}
     strategy:
+      fail-fast: false
       matrix:
-        julia-version: ['1.6', 'nightly']
+        version: ['1', 'nightly']
         os: [ubuntu-latest, windows-latest, macOS-latest]
-      # fail-fast: true
-
     steps:
-      - uses: actions/checkout@v3
-      - name: "Set up Julia"
-        uses: julia-actions/setup-julia@v1
+      - uses: actions/checkout@v4
+
+#     - name: "Set up Julia"
+      - uses: julia-actions/setup-julia@latest
         with:
-          version: ${{ matrix.julia-version }}
+          version: ${{ matrix.version }}
 
-      - name: Cache artifacts
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-artifacts
-        with:
-          path: ~/.julia/artifacts 
-          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-test-${{ env.cache-name }}-
-            ${{ runner.os }}-test-
-            ${{ runner.os }}-
+#     - name: "Unit Test"
+      - uses: julia-actions/julia-buildpkg@latest
+      - uses: julia-actions/julia-runtest@latest
 
-      - name: "Unit Test"
-        uses: julia-actions/julia-runtest@v1
-
+#     - name: "Cover"
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v3
+        if: ${{ matrix.version == '1' && matrix.os == 'ubuntu-latest' }}
         with:
           file: lcov.info
